--- a/action.yml
+++ b/action.yml
@@ -24,6 +24,13 @@ runs:
       uses: actions/setup-python@v5
       with:
         python-version: '3.12'
+
+    - name: Install deps
+      shell: bash
+      run: |
+        python -m pip install --upgrade pip
+        python -m pip install -r "${{ github.action_path }}/requirements.txt"
+        
     - name: "make changelog"
       id: make-changelog
       shell: bash
