revert some debug output

--- a/action.yml
+++ b/action.yml
@@ -35,7 +35,4 @@ runs:
       env:
         CONFFILE: "${{ inputs.conffile }}"
         GH_TOKEN: ${{ github.token }}
-      run: |
-        pwd
-        ls -lah
-        "python3 ${{ github.action_path }}/release-notes.py ${{ inputs.version }}"
+      run: "python3 ${{ github.action_path }}/release-notes.py ${{ inputs.version }}"
