--- a/action.yml
+++ b/action.yml
@@ -8,6 +8,9 @@ inputs:
   conffile:
     description: "config file path"
     required: true
+  changelogfile:
+    description: "Path to changelog file"
+    required: true
   
 
 outputs:
@@ -33,6 +36,7 @@ runs:
       id: make-changelog
       shell: bash
       env:
-        CONFFILE: "${{ inputs.conffile }}"
+        CONFFILE: ${{ inputs.conffile }}
         GH_TOKEN: ${{ github.token }}
+        CHANGELOGFILE: ${{ inputs.changelogfile }}
       run: "python3 ${{ github.action_path }}/release-notes.py ${{ inputs.version }}"
